# philosophical-topic-modeling

./: .gitignore  Makefile  README.md  experiments_supervised.py  pyproject.toml  requirements.txt
philo_topic_modeling/: __init__.py  app.py  cluster.py  config.py  db.py  features.py  pipeline.py  scraper.py  topic_model.py
scripts/: persist.py
tests/: test_db.py
