[project]
name = "philo_topic_modeling"
version = "0.1.0"
description = "Topic modeling of SEP entries with LDA/NMF and clustering"
authors = [{name="Bruno Machado de Araujo", email="bm.araujo@unesp.br"}]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "sqlite-utils>=3.12.0",
    "scikit-learn>=1.2.0",
    "streamlit>=1.20.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
